--- a/src/Assets/Css/skin.css
+++ b/src/Assets/Css/skin.css
@@ -233,16 +233,16 @@
   .table-default.dense > tbody > tr > td { @apply px-1 py-1; }
 
 
-  .adios-lookup[class*='-container'] { width: 100%; }
-  .adios-lookup *[class*='-indicator'] { padding: 0px !important; }
-  .adios-lookup *[class*='-control'] { @apply !w-full rounded-sm !bg-white dark:!bg-slate-500 dark:!text-white; min-height: auto !important; }
-  .adios-lookup *[class*='-control'] > div { padding-bottom: 0px !important; padding-top: 0px !important; }
-  .adios-lookup *[class*='-input-container'] { @apply !p-0.5 !m-0; min-width: 2em; }
-  .adios-lookup *[class*='-ValueContainer'] { @apply !p-0; }
-  .adios-lookup *[class*='-singleValue'] { @apply dark:!text-white; }
-  .adios-lookup *[class*='-Input'] { @apply !text-sm; }
-  .adios-lookup *[class*='-menu'] * { @apply !text-sm; }
-  .adios-lookup > div > div { @apply p-0; }
-  .adios-lookup > div > div > div { @apply p-0; }
+  .hubleto-lookup[class*='-container'] { width: 100%; }
+  .hubleto-lookup *[class*='-indicator'] { padding: 0px !important; }
+  .hubleto-lookup *[class*='-control'] { @apply !w-full rounded-sm !bg-white dark:!bg-slate-500 dark:!text-white; min-height: auto !important; }
+  .hubleto-lookup *[class*='-control'] > div { padding-bottom: 0px !important; padding-top: 0px !important; }
+  .hubleto-lookup *[class*='-input-container'] { @apply !p-0.5 !m-0; min-width: 2em; }
+  .hubleto-lookup *[class*='-ValueContainer'] { @apply !p-0; }
+  .hubleto-lookup *[class*='-singleValue'] { @apply dark:!text-white; }
+  .hubleto-lookup *[class*='-Input'] { @apply !text-sm; }
+  .hubleto-lookup *[class*='-menu'] * { @apply !text-sm; }
+  .hubleto-lookup > div > div { @apply p-0; }
+  .hubleto-lookup > div > div > div { @apply p-0; }
 
 }
